added jupyter notebooks as pdf files

--- a/lab0/code/jupyterinArcOnline.ipynb
+++ b/lab0/code/jupyterinArcOnline.ipynb
@@ -18,16 +18,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.6/site-packages/arcgis/gis/__init__.py:407: UserWarning: You are logged on as leex6165_UMN with an administrator role, proceed with caution.\n",
-      "  self.users.me.username)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from arcgis.gis import GIS\n",
     "gis = GIS(\"home\")"
@@ -216,6 +207,7 @@
     }
    ],
    "source": [
+    "# Map with both the buffered and original state trails\n",
     "map1"
    ]
   },
