Completed lab report and added conceptual model jpegs. Removed FTPlib attempt code.

--- a/lab1/code/NDAWN API.ipynb
+++ b/lab1/code/NDAWN API.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Time options are: ('hourly', 'daily', 'weekly', 'monthly')\n",
+      "Enter the time type: weekly\n",
+      "Enter the station number: 78\n"
+     ]
+    }
+   ],
    "source": [
     "base_url = \"https://ndawn.ndsu.nodak.edu/table.csv?\"\n",
     "\n",
@@ -89,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,9 +147,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter dataset begin date YYYY-MM-DD: 2021-01-02\n",
+      "Enter the number of weeks interested: 2\n",
+      "\n",
+      "wdmxt: max air temp\n",
+      "wdmnt: min air temp\n",
+      "wdavt: avg air temp\n",
+      "wdbst: avg bare soil temp\n",
+      "wdtst: avg turf soil temp\n",
+      "wdws: avg wind speed\n",
+      "wdmxws: max wind speed\n",
+      "wdsr: total solar radiation\n",
+      "wdapet: avg pet (penman)\n",
+      "wdtpet: total pet (penman)\n",
+      "wdr: total rainfall\n",
+      "wddp: avg dew point\n",
+      "wdwc: avg wind chill\n",
+      "\n",
+      "Enter the variable codes you are interested in seperated by a comma: wdmxt,wdws,wdavt\n",
+      "https://ndawn.ndsu.nodak.edu/table.csv?station=78&variable=wdmxt&variable=wdws&variable=wdavt&ttype=weekly&quick_pick=&begin_date=2021-01-02&count=2\n",
+      "Url valid. Extracting...\n",
+      "File extracted.\n"
+     ]
+    }
+   ],
    "source": [
     "# define parameters based on ttype\n",
     "\n",
